[tool.poetry]
name = "radio date"
version = "0.1.0"
description = "Hear each other"
authors = ["yepIwt <ReetRay@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
punq = "^0.7.0"
pydantic = "2.9"
aiogram = "^3.15.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"


[tool.poetry.group.code-quality.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
